force-app/main/default/objects/FHIR_Test_Result__c/FHIR_Test_Result__c.object-meta.xml
<CustomObject>
    <label>FHIR Test Result</label>
    <pluralLabel>FHIR Test Results</pluralLabel>
    <nameField>
        <label>Result Name</label>
        <type>AutoNumber</type>
        <displayFormat>FHIR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>