force-app/main/default/objects/FHIR_Test_Result__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <label>Raw Payload</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>