force-app/main/default/objects/FHIR_Test_Result__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>