force-app/main/default/objects/FHIR_Test_Result__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PASS</fullName><label>PASS</label><default>false</default></value>
            <value><fullName>FAIL</fullName><label>FAIL</label><default>false</default></value>
            <value><fullName>WARNING</fullName><label>WARNING</label><default>false</default></value>
            <value><fullName>ERROR</fullName><label>ERROR</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>