force-app/main/default/objects/FHIR_Test_Result__c/fields/Test_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Id__c</fullName>
    <label>Test Case ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>