force-app/main/default/objects/FHIR_Test_Result__c/fields/Violations__c.field-meta.xml
<CustomField>
    <fullName>Violations__c</fullName>
    <label>Violations</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>